[gd_scene load_steps=21 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Art/tilemap.png" type="Texture" id=2]
[ext_resource path="res://Code/RhythmSprites.gd" type="Script" id=3]
[ext_resource path="res://Code/Player.gd" type="Script" id=4]
[ext_resource path="res://Code/Timer.gd" type="Script" id=5]
[ext_resource path="res://Code/Stone.gd" type="Script" id=6]
[ext_resource path="res://Code/TileMap.gd" type="Script" id=7]
[ext_resource path="res://Code/Plant.gd" type="Script" id=8]
[ext_resource path="res://Code/AudioHandler.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Interface.tscn" type="PackedScene" id=13]

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 53.5248, 0.0341339, 11.4687, 11.0811, 13.4068, 34.9193, 8.56163, 19.221, 17.0891, 1.00317, 19.221, 0.421753, 44.9973, 30.268, 32.9813, 45.1911, 35.8884, 23.2909, 41.315 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 63.776, 52.0223, 35.3096, 39.4636, 16.053, 36.3938, 33.3561, 32.7657, 62.9387, 43.5801, 62.9387, 19.0209, 53.1709, 17.4162, 38.6586, 14.9045, 29.728, 8.20651, 47.5892, 12.9509, 63.776, 12.9509 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=18]
0/name = "tilemap.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 64, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 12 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tilemap.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 128, 64, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 13 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tilemap.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 14 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tilemap.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 15 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tilemap.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 128, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 16 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tilemap.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 64, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 17 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "tilemap.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 192, 64, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "tilemap.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 256, 0, 128, 128 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[sub_resource type="StreamTexture" id=11]
flags = 4
load_path = "res://.import/charasprite.png-6caa27f8f8bdf198005ac8222dc11174.stex"

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 21.5, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 21.5, 32 )

[node name="Game" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 18 )
format = 1
tile_data = PoolIntArray( 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393243, 7, 0, 393246, 2, 0, 393247, 2, 0, 393248, 2, 0, 393249, 2, 0, 393250, 2, 0, 393251, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 4, 0, 458767, 4, 0, 458768, 4, 0, 458769, 4, 0, 458770, 2, 0, 458771, 2, 0, 458781, 2, 0, 458782, 4, 0, 458783, 4, 0, 458784, 4, 0, 458785, 4, 0, 458786, 4, 0, 458787, 4, 0, 458788, 2, 0, 458789, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 4, 0, 524304, 4, 0, 524305, 4, 0, 524306, 4, 0, 524307, 4, 0, 524308, 2, 0, 524315, 2, 0, 524316, 2, 0, 524317, 4, 0, 524321, 4, 0, 524322, 4, 0, 524323, 4, 0, 524324, 4, 0, 524325, 4, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 4, 0, 589840, 4, 0, 589841, 4, 0, 589842, 4, 0, 589843, 4, 0, 589844, 4, 0, 589845, 2, 0, 589846, 2, 0, 589850, 2, 0, 589851, 4, 0, 589852, 4, 0, 589853, 4, 0, 589861, 4, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 655380, 4, 0, 655381, 4, 0, 655382, 4, 0, 655383, 2, 0, 655388, 4, 0, 655389, 4, 0, 655390, 4, 0, 655391, 4, 0, 655395, 7, 0, 655397, 4, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720906, 6, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 4, 0, 720917, 4, 0, 720918, 4, 0, 720919, 4, 0, 720920, 2, 0, 720925, 4, 0, 720926, 4, 0, 720927, 4, 0, 720928, 4, 0, 720929, 4, 0, 720933, 4, 0, 786432, 4, 0, 786433, 4, 0, 786434, 4, 0, 786435, 4, 0, 786436, 4, 0, 786437, 4, 0, 786438, 4, 0, 786439, 4, 0, 786442, 2, 0, 786443, 4, 0, 786444, 4, 0, 786445, 4, 0, 786446, 4, 0, 786447, 4, 0, 786448, 4, 0, 786449, 4, 0, 786450, 4, 0, 786451, 4, 0, 786452, 4, 0, 786453, 4, 0, 786454, 4, 0, 786455, 4, 0, 786456, 4, 0, 786457, 2, 0, 786458, 2, 0, 786459, 6, 0, 786467, 2, 0, 786468, 2, 0, 786469, 4, 0, 851968, 4, 0, 851969, 4, 0, 851970, 4, 0, 851971, 4, 0, 851972, 4, 0, 851973, 4, 0, 851974, 4, 0, 851975, 4, 0, 851978, 4, 0, 851979, 4, 0, 851980, 4, 0, 851981, 4, 0, 851982, 4, 0, 851983, 4, 0, 851984, 4, 0, 851985, 4, 0, 851986, 4, 0, 851987, 4, 0, 851988, 4, 0, 851989, 4, 0, 851990, 4, 0, 851991, 4, 0, 851992, 4, 0, 851993, 4, 0, 851994, 4, 0, 851995, 2, 0, 852003, 4, 0, 852004, 4, 0, 852005, 4, 0, 917504, 4, 0, 917505, 4, 0, 917506, 4, 0, 917507, 4, 0, 917508, 4, 0, 917509, 4, 0, 917510, 4, 0, 917511, 4, 0, 917514, 4, 0, 917515, 4, 0, 917516, 4, 0, 917517, 4, 0, 917518, 4, 0, 917519, 4, 0, 917520, 4, 0, 917521, 4, 0, 917522, 4, 0, 917523, 4, 0, 917524, 4, 0, 917525, 4, 0, 917526, 4, 0, 917527, 4, 0, 917528, 4, 0, 917529, 4, 0, 917530, 4, 0, 917531, 4, 0, 917533, 2, 0, 917534, 2, 0, 917537, 4, 0, 917538, 4, 0, 917539, 4, 0, 917540, 4, 0, 917541, 4, 0, 983040, 4, 0, 983041, 4, 0, 983042, 4, 0, 983043, 4, 0, 983044, 4, 0, 983045, 4, 0, 983046, 4, 0, 983047, 4, 0, 983050, 4, 0, 983051, 4, 0, 983052, 4, 0, 983053, 4, 0, 983054, 4, 0, 983055, 4, 0, 983056, 4, 0, 983057, 4, 0, 983058, 4, 0, 983059, 4, 0, 983060, 4, 0, 983061, 4, 0, 983062, 4, 0, 983063, 4, 0, 983064, 4, 0, 983065, 4, 0, 983066, 4, 0, 983067, 4, 0, 983069, 4, 0, 983070, 4, 0, 983071, 2, 0, 983072, 4, 0, 983073, 4, 0, 983074, 4, 0, 983075, 4, 0, 983076, 4, 0, 983077, 4, 0 )
script = ExtResource( 7 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 233, 452 )
script = ExtResource( 4 )

[node name="RhythmSprites" type="Node2D" parent="Player"]
script = ExtResource( 3 )

[node name="ComboSprite1" type="Sprite" parent="Player/RhythmSprites"]
position = Vector2( -98, -26 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="ComboSprite2" type="Sprite" parent="Player/RhythmSprites"]
position = Vector2( -75.8, -25.8 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="ComboSprite3" type="Sprite" parent="Player/RhythmSprites"]
position = Vector2( -52.8, -25.8 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="ComboSprite4" type="Sprite" parent="Player/RhythmSprites"]
position = Vector2( -30, -26 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 1.5, 0 )
shape = SubResource( 5 )

[node name="RigidBody2D" type="RigidBody2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/RigidBody2D"]
position = Vector2( 1.5, 0 )
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_bottom = 1020
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.3
drag_margin_top = 0.3
drag_margin_right = 0.3
drag_margin_bottom = 0.3

[node name="Timer" type="Node" parent="."]
script = ExtResource( 5 )

[node name="StoneHandler" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="PlantHandler" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource( 9 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="UI" type="Node" parent="Canvas"]

[node name="Interface" parent="Canvas/UI" instance=ExtResource( 13 )]
